# cctest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WORKSPACE  install.sh
cctest/: BUILD.bazel  CMakeLists.txt  cctest.h
cctest/auto/: auto_test_fixture.h  auto_test_hook.h  auto_test_method.h
cctest/base/: color.cc  color.h  formatter.cc  formatter.h  keywords.h  logger.cc  logger.h  self.h  singleton.h  string_utils.cc  string_utils.h  string_view.cc  string_view.h  struct_wrapper.h  symbol.h  time_val.cc  time_val.h  type_string.cc  type_string.h
cctest/core/: CMakeLists.txt  asserter.h  assertion_error.cc  assertion_error.h  bare_test_case.h  bare_test_once.h  method.h  multi_listener.cc  multi_listener.h  startup.cc  test.cc  test.h  test_case.cc  test_case.h  test_case_spec.cc  test_desc.cc  test_desc.h  test_failure.cc  test_failure.h  test_fixture.h  test_fixture_spec.cc  test_functor.h  test_listener.h  test_method.h  test_method_spec.cc  test_once.h  test_once_functor.cc  test_once_functor.h  test_protector.h  test_result.cc  test_result.h  test_result_spec.cc  test_runner.cc  test_runner.h  test_suite.cc  test_suite.h  test_suite_spec.cc
cctest/core/internal/: bare_test_case.h  bare_test_suite.h  test_case_method.h  test_case_protector.h
cctest/def/: fixture_def.h  hook_def.h  test_def.h
cctest/except/: assertion_error.cc  assertion_error.h  test_failure.cc  test_failure.h
cctest/factory/: test_factory.h  test_hook_registry.cc  test_hook_registry.h  test_method_factory.h  test_method_registry.h  test_name.cc  test_name.h  test_suite_factory.cc  test_suite_factory.h
cctest/hook/: hook.cc  hook.h  hook_registry.cc  hook_registry.h
cctest/listener/: failure_list.cc  test_collector.cc  test_collector.h  test_status.cc  test_status.h  text_progress.cc
cctest/listener/collector/: failure_list.cc  failure_list.h  test_collector.cc  test_collector.h  test_status.cc  test_status.h  time_collector.cc  time_collector.h
cctest/listener/text/: colorful_printer.cc  colorful_printer.h  text_progress.cc  text_progress.h
cctest/main/: CMakeLists.txt  main.cc  startup.cc  startup.h
cctest/matcher/base/: description.cc  description.h  description.inc  matcher_traits.h  self_describing.h
cctest/matcher/base/internal/: self_describing_list.h  self_describing_value.h
cctest/matcher/core/: comparator.h
cctest/util/: time_val.cc  time_val.h
cmake/copts/: cctest_config.cmake.in  cctest_copts.cmake  cctest_install.cmake  cctest_rules.cmake  copts_defs.cmake
cmake/gtest/: CMakeLists.txt.in  download-gtest.cmake
dockerfiles/: Dockerfile.devel
examples/: CMakeLists.txt  README.md  WORKSPACE
examples/simple/: BUILD.bazel  CMakeLists.txt  simple_test.cc
examples/stlspec/: BUILD.bazel  CMakeLists.txt  queue_spec.cc
spec/: BUILD.bazel  CMakeLists.txt  failure_list_spec.cc  test_collector_spec.cc  test_result_spec.cc  test_status_spec.cc  test_suite_spec.cc  text_progress_spec.cc  time_collector_spec.cc
spec/auto/: BUILD.bazel  CMakeLists.txt  queue_spec.cc  stack_spec.cc
spec/base/: CMakeLists.txt  string_utils_spec.cc  string_view_spec.cc
spec/core/: BUILD.bazel  CMakeLists.txt  asserter_spec.cc  test_case_spec.cc  test_desc_spec.cc  test_fixture_spec.cc  test_hook_spec.cc  test_method_spec.cc  test_result_spec.cc  test_suite_spec.cc
spec/factory/: BUILD.bazel  CMakeLists.txt  test_name_spec.cc
spec/hook/: CMakeLists.txt  hook_spec.cc
spec/listener/: BUILD.bazel  CMakeLists.txt  failure_list_spec.cc  test_collector_spec.cc  test_status_spec.cc  text_progress_spec.cc  time_collector_spec.cc
spec/matcher/: CMakeLists.txt  description_spec.cc
