licenses(["notice"])  # Apache 

exports_files(["LICENSE"])

cc_library(
  name = "cctest",
  srcs = glob(
    include = [
      "**/*.cc"
    ],
    exclude = [
      "**/*_spec.cc", 
      "**/*_test.cc",
      "main/main.cc",
    ],
  ),
  hdrs = glob(
    include = [
      "**/*.h",
      "**/*.inc",
      "**/*.hpp",
    ],
  ),
  visibility = ["//visibility:public"],
)

cc_library(
  name = "main",
  srcs = [
    "main/main.cc",
  ],
  deps = [
    ":cctest",
  ],
  visibility = ["//visibility:public"],
)
