cc_test(
  name = "test_method_spec",
  srcs = [
    "test_method_spec.cc"
  ],
  deps = [
    "//cctest",
    "@com_github_google_googletest//:gtest",
    "@com_github_google_googletest//:gtest_main",    
  ],
)

cc_test(
  name = "test_case_spec",
  srcs = [
    "test_case_spec.cc",
  ],
  deps = [
    "//cctest",
    "@com_github_google_googletest//:gtest",
    "@com_github_google_googletest//:gtest_main",    
  ]
)

cc_test(
  name = "test_fixture_spec",
  srcs = [
    "test_fixture_spec.cc",
  ],
  deps = [
    "//cctest",
    "@com_github_google_googletest//:gtest",
    "@com_github_google_googletest//:gtest_main",    
  ]
)

cc_test(
  name = "test_suite_spec",
  srcs = [
    "test_suite_spec.cc",
  ],
  deps = [
    "//cctest",
    "@com_github_google_googletest//:gtest",
    "@com_github_google_googletest//:gtest_main",    
  ]
)

cc_test(
  name = "test_result_spec",
  srcs = [
    "test_result_spec.cc",
  ],
  deps = [
    "//cctest",
    "@com_github_google_googletest//:gtest",
    "@com_github_google_googletest//:gtest_main",    
  ]
)

cc_test(
  name = "test_collector_spec",
  srcs = [
      "test_collector_spec.cc",
  ],
  deps = [
      "//cctest",
      "@com_github_google_googletest//:gtest",
      "@com_github_google_googletest//:gtest_main",          
  ],
)

cc_test(
  name = "failure_list_spec",
  srcs = [
      "failure_list_spec.cc",
  ],
  deps = [
      "//cctest",
      "@com_github_google_googletest//:gtest",
      "@com_github_google_googletest//:gtest_main",                
  ],
)

cc_test(
  name = "test_status_spec",
  srcs = [
      "test_status_spec.cc",
  ],
  deps = [
      "//cctest",
      "@com_github_google_googletest//:gtest",
      "@com_github_google_googletest//:gtest_main",                
  ],
)

cc_test(
  name = "text_progress_spec",
  srcs = [
      "text_progress_spec.cc",
  ],
  deps = [
      "//cctest",
      "@com_github_google_googletest//:gtest",
      "@com_github_google_googletest//:gtest_main",      
  ],
)
