cc_test(
  name = "stack_spec",
  srcs = [
    "stack_spec.cc"
  ],
  deps = [
    "@github_ccup_cctest//cctest",
    "@github_ccup_cctest//cctest:main",
  ],
)

cc_test(
  name = "queue_spec",
  srcs = [
    "queue_spec.cc"
  ],
  deps = [
    "@github_ccup_cctest//cctest",
    "@github_ccup_cctest//cctest:main",
  ],
)
