cc_test(
  name = "stack_spec",
  srcs = [
    "stack_spec.cc"
  ],
  deps = [
    "//cctest",
    "//cctest:main",        
    "@com_github_google_googletest//:gtest",
  ],
)

cc_test(
  name = "queue_spec",
  srcs = [
    "queue_spec.cc"
  ],
  deps = [
    "//cctest",
    "//cctest:main",    
    "@com_github_google_googletest//:gtest",
  ],
)
