cc_test(
  name = "test_collector_spec",
  srcs = [
      "test_collector_spec.cc",
  ],
  deps = [
      "//cctest",
      "@com_github_google_googletest//:gtest",
      "@com_github_google_googletest//:gtest_main",          
  ],
)

cc_test(
  name = "failure_list_spec",
  srcs = [
      "failure_list_spec.cc",
  ],
  deps = [
      "//cctest",
      "//cctest:main",                
  ],
)

cc_test(
  name = "test_status_spec",
  srcs = [
      "test_status_spec.cc",
  ],
  deps = [
      "//cctest",
      "@com_github_google_googletest//:gtest",
      "@com_github_google_googletest//:gtest_main",                
  ],
)

cc_test(
  name = "text_progress_spec",
  srcs = [
      "text_progress_spec.cc",
  ],
  deps = [
      "//cctest",
      "@com_github_google_googletest//:gtest",
      "@com_github_google_googletest//:gtest_main",      
  ],
)

cc_test(
  name = "time_collector_spec",
  srcs = [
      "time_collector_spec.cc",
  ],
  deps = [
      "//cctest",
      "@com_github_google_googletest//:gtest",
      "@com_github_google_googletest//:gtest_main",      
  ],
)

